[package]
name = "kalam"
version = "0.1.0"
edition = "2021"
description = "A simple CLI tool to track your time"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.24"
anyhow = "1.0.44"
home = "0.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.64"
chrono = "0.4.19"
uuid = {version = "1.4.1", features = ["serde", "v4"]}

